--- a/fdbserver/fdbserver.vcxproj
+++ b/fdbserver/fdbserver.vcxproj
@@ -219,6 +219,9 @@
     <ActorCompiler Include="RestoreWorker.actor.h">
       <EnableCompile>false</EnableCompile>
     </ActorCompiler>
+    <ActorCompiler Include="RestoreWorkerInterface.actor.h">
+      <EnableCompile>false</EnableCompile>
+    </ActorCompiler>
     <ActorCompiler Include="RestoreRoleCommon.actor.h">
       <EnableCompile>false</EnableCompile>
     </ActorCompiler>
