FairRandomSim with buggified delay

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -190,6 +190,7 @@ add_subdirectory(fdbrpc)
 add_subdirectory(fdbclient)
 add_subdirectory(fdbserver)
 add_subdirectory(fdbcli)
+add_subdirectory(fdb-summit-talk)
 if(NOT WIN32)
   add_subdirectory(fdbmonitor)
 else()
