Add --fuzz argument to fdbserver

--- a/fdb-summit-talk/CMakeLists.txt
+++ b/fdb-summit-talk/CMakeLists.txt
@@ -3,7 +3,7 @@ target_compile_options(simulation_fair PRIVATE -fsanitize=address,undefined)
 target_link_options(simulation_fair PRIVATE -fsanitize=address,undefined)
 target_link_libraries(simulation_fair PRIVATE flow boost_target)
 
-if (CLANG)
+if (0 AND CLANG)
   add_flow_target(EXECUTABLE NAME simulation_fuzz SRCS simulation.actor.cpp)
   target_compile_options(simulation_fuzz PRIVATE -fsanitize=address,undefined,fuzzer)
   target_compile_definitions(simulation_fuzz PRIVATE -DUSE_LIBFUZZER=1)
