--- a/fdb-summit-talk/CMakeLists.txt
+++ b/fdb-summit-talk/CMakeLists.txt
@@ -3,6 +3,12 @@ target_compile_options(simulation_fair PRIVATE -fsanitize=address,undefined)
 target_link_options(simulation_fair PRIVATE -fsanitize=address,undefined)
 target_link_libraries(simulation_fair PRIVATE flow boost_target)
 
+add_flow_target(EXECUTABLE NAME simulation_fair_trace SRCS simulation.actor.cpp)
+target_compile_options(simulation_fair_trace PRIVATE -fsanitize=address,undefined)
+target_compile_definitions(simulation_fair_trace PRIVATE -DDO_TRACE=1)
+target_link_options(simulation_fair_trace PRIVATE -fsanitize=address,undefined)
+target_link_libraries(simulation_fair_trace PRIVATE flow boost_target)
+
 if (CLANG)
   add_flow_target(EXECUTABLE NAME simulation_fuzz SRCS simulation.actor.cpp)
   target_compile_options(simulation_fuzz PRIVATE -fsanitize=address,undefined,fuzzer)
@@ -10,9 +16,9 @@ if (CLANG)
   target_link_options(simulation_fuzz PRIVATE -fsanitize=address,undefined,fuzzer)
   target_link_libraries(simulation_fuzz PRIVATE flow boost_target)
 
-  add_flow_target(EXECUTABLE NAME simulation_fuzz_repro SRCS simulation.actor.cpp repro_fuzz_main.cc)
-  target_compile_options(simulation_fuzz_repro PRIVATE -fsanitize=address,undefined)
-  target_compile_definitions(simulation_fuzz_repro PRIVATE -DUSE_LIBFUZZER=1)
-  target_link_options(simulation_fuzz_repro PRIVATE -fsanitize=address,undefined)
-  target_link_libraries(simulation_fuzz_repro PRIVATE flow boost_target)
+  add_flow_target(EXECUTABLE NAME simulation_fuzz_trace SRCS simulation.actor.cpp trace_fuzz_main.cc)
+  target_compile_options(simulation_fuzz_trace PRIVATE -fsanitize=address,undefined)
+  target_compile_definitions(simulation_fuzz_trace PRIVATE -DUSE_LIBFUZZER=1 -DDO_TRACE=1)
+  target_link_options(simulation_fuzz_trace PRIVATE -fsanitize=address,undefined)
+  target_link_libraries(simulation_fuzz_trace PRIVATE flow boost_target)
 endif()
